  o Documentation Changes:
    * The documentation strings for the update code have been updated
      to include the most common exceptions raised as part of prepareChangeSet
      and updateChangeSet. (CNY-1732)

  o Build Changes:
    * File level requirements provided by the same file are dropped. (CNY-2177)
    * Exclude Java dependencies that do not start with a valid TLD. (CNY-2176)
    * exceptDeps is now allowed for r.Provides. (CNY-1485)
    * sourceDir keyword parameter for r.addSource, r.addPatch, and r.addArchive. (CNY-1439)

  o Client Changes:
    * Added keepRequired config option that has the same effect as
      always setting the --keep-required flag on update. (CNY-569)
    * The error message for erased dependencies is now more explicit about
      what happened to the package that is no longer providing dependencies
      and where the package with the missing dependencies came from. (CNY-2248)
    * We now record the current state of the database to a flat file
      after updates as a restoration mechanism as an extreme recovery mechanism.
      (CNY-1801)

  o Bug Fixes:
    * The "logcat" script no longer errors out if the log file is empty
      or contains None for entitlements. (CNY-2252)
    * Repositories running under Apache are now correctly displaying
      the real error when trying to generate the verbose traceback
      emails. (CNY-2320)
    * An update job that includes a critical update and an update to a
      group that includes a pre-update script will no longer run the
      script twice. (CNY-2325)

Changes in 1.2.8:
  o Client Changes:
    * Added the cvc derive command. (CNY-2237)
    * A new method, conary.conaryclient.getClient(), has been added to
      allow the creation of a conaryclient with configuration to match
      that would be used with a conary command line client. (CNY-1745)
    * Unhandled exceptions that are raised inside a progress callback