@@ -7,8 +7,13 @@ Changes in @NEW@:
   o Build Changes:
     * File level requirements provided by the same file are dropped. (CNY-2177)
     * Exclude Java dependencies that do not start with a valid TLD. (CNY-2176)
-    * exceptDeps is now allowed for r.Provides. (CNY-1485)
-    * sourceDir keyword parameter for r.addSource, r.addPatch, and r.addArchive. (CNY-1439)
+    * The exceptDeps keyword parameter is now allowed for r.Provides()
+      analogously to r.Requires(). (CNY-1485)
+    * The new sourceDir keyword parameter is now available for for
+      r.addSource(), r.addPatch(), and r.addArchive() to specify that
+      the source is found within the maindir. (CNY-1439)
+    * LD_LIBRARY_PATH is now set when calling bootstrapped python, in
+      order to load correct python libraries. (CNY-2319)
 
   o Client Changes:
     * Added keepRequired config option that has the same effect as
